# minko

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .releaserc.json  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  DownloadCEF.cmake  Doxyfile  LICENSE.md  LICENSE.txt  Makefile  Minko.md  README.md  VERSION  Vagrantfile  adapt-template.py  android-build.cmake  android.apk.cmake  android_setup.sh  build.properties  build.sh  build.xml  copy.cmake  cpjf.cmake  framework.rar.REMOVED.git-id  install.txt  license.txt  minko.cmake  minko.sublime-project  minko.sublime-workspace  package.cmake  packages.xml  plugin.lua  plugins.cmake  premake4.lua  (+5 more)
example/cube/: CMakeLists.txt  premake5.lua
example/cube/asset/: index.html
example/cube/src/: Main.cpp  main.cpp
example/serializer/: CMakeLists.txt  premake5.lua
example/serializer/asset/: lights.scene  lights.scene.REMOVED.git-id
example/serializer/src/: main.cpp
framework/: .gitignore  CMakeLists.txt  enable.cmake  packages.config  premake4.lua  premake5.lua
framework/asset/effect/: BaseStreamingTemplate.effect  BaseTemplate.effect  Basic.effect  Basic.fragment.glsl  Basic.vertex.glsl  Envmap.function.glsl  Fog.function.glsl  LightMapping.function.glsl  Line.effect  Line.fragment.glsl  Line.vertex.glsl  Math.function.glsl  PBR.function.glsl  Pack.function.glsl  Phong.effect  Phong.fragment.glsl  Phong.function.glsl  Phong.struct.glsl  Phong.vertex.glsl  Phong2.effect  Phong2.fragment.glsl  Picking.effect  Picking.fragment.glsl  Picking.vertex.glsl  PickingDepth.effect  PickingDepth.fragment.glsl  PickingDepth.vertex.glsl  Pop.function.glsl  ShadowMap.effect  ShadowMap.glsl  ShadowMapping.function.glsl  Skinning.function.glsl  SpotLightShadowMap.effect  SpotLightShadowMap.glsl  Sprite.effect  Sprite.fragment.glsl  Sprite.vertex.glsl  TextureLod.extension.glsl  TextureLod.function.glsl  ToneMapping.function.glsl  (+3 more)
framework/effect/: Basic.effect  Basic.fragment.glsl  Basic.vertex.glsl  BlinnPhong.function.glsl  DirectionalLight.effect  Line.effect  Line.vertex.glsl  Particles.effect  Phong.effect  Phong.fragment.glsl  Phong.function.glsl  Phong.glsl  Phong.struct.glsl  Phong.vertex.glsl  Picking.effect  Picking.fragment.glsl  SkinnedBasic.effect  Skinning.fragment.glsl  Skinning.function.glsl  Skinning.vertex.glsl  SponzaLighting.effect  SponzaPhong.effect  Sprite.effect  Sprite.fragment.glsl  Sprite.vertex.glsl  VertexNormal.effect
framework/include/minko/: AbstractCanvas.hpp  Any.hpp  CloneOption.hpp  Color.hpp  Common.hpp  Flyweight.hpp  Hash.hpp  Minko.hpp  Rand.hpp  Setup.hpp  Signal.hpp  Uuid.hpp  std.hpp
framework/lib/glew/: LICENSE
framework/lib/glm/: readme.txt
framework/lib/glsl-optimizer/: premake4.lua
framework/lib/jsonmoderncpp/: a.out  test.cpp  test.cpp~
framework/src/: AbstractController.hpp  DataBindings.cpp  DataBindings.hpp  DataProvider.cpp  DataProvider.hpp  Matrix4x4.cpp  Matrix4x4.hpp  Minko.hpp  Node.cpp  Node.hpp  OpenGLESContext.cpp  RenderingController.cpp  RenderingController.hpp  SurfaceController.cpp  SurfaceController.hpp
framework/src/minko/: AbstractCanvas.cpp  AbstractCanvas.hpp  Any.hpp  AssetsLibrary.cpp  AssetsLibrary.hpp  Color.cpp  Color.hpp  Common.hpp  Minko Framework Header.hpp  Minko.hpp  Rand.cpp  Signal.hpp  SignalConnection.hpp  Uuid.cpp  to_string.hpp
plugin/angle/: CMakeLists.txt  enable.cmake  plugin.lua  premake5.lua
plugin/assimp/: CMakeLists.txt  enable.cmake  plugin.lua  premake5.lua
plugin/assimp/tool/: gen-assimp-parser.sh
plugin/devil/: CMakeLists.txt  enable.cmake  plugin.lua  premake5.lua
plugin/devil/lib/: CMakeLists.txt
plugin/html-overlay/: .gitignore  CMakeLists.txt  enable.cmake  plugin.lua  premake5.lua
plugin/http-worker/: .gitignore  CMakeLists.txt  README.md  enable.cmake  plugin.lua  premake5.lua
plugin/http-worker/script/: generate_libcurl_lib.bat
plugin/png/: CMakeLists.txt  activate.cmake  enable.cmake  plugin.lua  premake5.lua
plugin/sdl/: CMakeLists.txt  activate.cmake  enable.cmake  plugin.lua  premake5.lua
plugin/sensors/: CMakeLists.txt  enable.cmake  plugin.lua  premake5.lua
plugin/serializer/: .gitignore  CMakeLists.txt  enable.cmake  plugin.lua  premake5.lua
plugin/serializer/lib/: README.md
plugin/serializer/script/: download_dependencies.sh
plugin/ttf/: CMakeLists.txt  enable.cmake  plugin.lua  premake5.lua
test/: .gitignore  CMakeLists.txt  premake5.lua  test.lua
test/asset/effect/: MacroBool2DefaultValue.effect  MacroBool3DefaultValue.effect  MacroBool4DefaultValue.effect  MacroBoolDefaultValue.effect  MacroFloat2DefaultValue.effect  MacroFloat3DefaultValue.effect  MacroFloat4DefaultValue.effect  MacroFloatDefaultValue.effect  MultiplePasses.effect  OneAttributeBinding.effect  OneIntMacroBinding.effect  OneUniformBinding.effect  OneUniformBindingAndDefault.effect  OneVariableIntMacroBinding.effect  PriorityFloatDefaultValue.effect  SamplerStatesBindingMipFilter.effect  SamplerStatesBindingMipFilterNoDefaultValue.effect  SamplerStatesBindingMipFilterWithDefaultValueLinear.effect  SamplerStatesBindingMipFilterWithDefaultValueNearest.effect  SamplerStatesBindingMipFilterWithDefaultValueNone.effect  SamplerStatesBindingTextureFilterNoDefaultValue.effect  SamplerStatesBindingTextureFilterWithDefaultValueLinear.effect  SamplerStatesBindingTextureFilterWithDefaultValueNearest.effect  SamplerStatesBindingWrapModeNoDefaultValue.effect  SamplerStatesBindingWrapModeWithDefaultValueClamp.effect  SamplerStatesBindingWrapModeWithDefaultValueRepeat.effect  SamplerStatesDefaultValues.effect  SamplerStatesMipFilterLinear.effect  SamplerStatesWrapModeRepeat.effect  StatesBindingBlendMode.effect  StatesBindingBlendingDestination.effect  StatesBindingBlendingMode.effect  StatesBindingBlendingSource.effect  StatesBindingColorMask.effect  StatesBindingScissorBox.effect  StatesBindingScissorTest.effect  StatesBindingStencilFunction.effect  StatesBindingTarget.effect  (+26 more)
test/src/: main.cpp
test/websocket-server/: ca.pem  cert.pem  index.py  key.pem  server.py  tls_server.py
(+6392 files in other folders)
